modif patchwork of CaenlaMer and color of footer

--- a/Test-cours-bootstrap-Mérouze-Aurélien/CaenlaMer.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/CaenlaMer.html
@@ -62,45 +62,58 @@
 
         <!-- ***************** Patchwork **************** -->
 
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-12 text-center mb-5">
-                    <h3>Bienvenue à Caen la Mer</h3>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="offset-lg-2 col-lg-8">
+                        <div class="text-center mb-5">
+                            <h3>Bienvenue à Caen la Mer</h3>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-5">
+                                <img class="img-fluid h-100" src="Img-CaenlaMer/Côte-Normande.jpg" alt="">
+                            </div>
+                            <div class="col-lg-7">
+                                <img class="img-fluid" src="Img-CaenlaMer/Château.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-7">
+                                <img class="img-fluid" src="Img-CaenlaMer/Entrée-chateau.jpg" alt="">
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid h-100" src="Img-CaenlaMer/Eglise-St-Pierre.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-5">
+                                <img class="img-fluid h-100" src="Img-CaenlaMer/Viaduc-Clécy.jpg" alt="">
+                            </div>
+                            <div class="col-lg-7">
+                                <img class="img-fluid" src="Img-CaenlaMer/Plage.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row mb-lg-3">
-                <div class="col-lg-5 "><img class="img-fluid h-100 w-100" src="Img-CaenlaMer/Côte-Normande.jpg" alt="">
-                </div>
-                <div class="col-lg-7 "><img class="img-fluid w-100" src="Img-CaenlaMer/Château.jpg" alt=""></div>
-            </div>
-            <div class="row mb-lg-3">
-                <div class="col-lg-7 "><img class="img-fluid w-100" src="Img-CaenlaMer/Entrée-chateau.jpg" alt=""></div>
-                <div class="col-lg-5 "><img class="img-fluid h-100 w-100" src="Img-CaenlaMer/Eglise-St-Pierre.jpg"
-                        alt=""></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-5 "><img class="img-fluid h-100 w-100" src="Img-CaenlaMer/Viaduc-Clécy.jpg" alt="">
-                </div>
-                <div class="col-lg-7 "><img class="img-fluid w-100" src="Img-CaenlaMer/Plage.jpg" alt=""></div>
-
-            </div>
+            
 
             <!-- ***************** Texte info Caen la Mer **************** -->
 
             <div class="container mt-5">
                 <div class="row text-center">
                     <div class=" offset-1 col-10 ">
-                        <p>Caen la Mer
+                        <p>
+                            <h3>Caen la Mer</h3>
                             <br>
                             Votre Destination Idéale pour des Vacances Inoubliables en Normandie !
-                            <br>
+                            <br><br>
                             Découvrez notre site de location saisonnière qui vous propose une sélection de
                             logements de qualité, garantissant un séjour confortable et mémorable.
-                            <br>
+                            <br><br>
                             Située à seulement 2 heures de Paris en train ou par autoroute, Caen la Mer bénéficie d'une
                             situation privilégiée en bord de l'Orne, avec un port de plaisance en plein cœur de la ville
                             et à quelques kilomètres des plages du débarquement et de la Suisse Normande.
-                            <br>
+                            <br><br>
                             La popularité croissante de Caen la Mer s'explique en grande partie par son offre culturelle
                             et patrimoniale exceptionnelle, comprenant des sites tels que le Mémorial, le Château de
                             Guillaume le Conquérant, l'église Saint-Jean et la bibliothèque. Vous pourrez également
@@ -108,14 +121,14 @@
                             verts, notamment l'immense prairie au cœur de la ville, parfaite pour les promenades, ainsi
                             que le magnifique Jardin des Plantes et la Colline aux Oiseaux, qui feront la joie des
                             petits et des grands.
-                            <br>
+                            <br><br>
                             Caen la Mer est une ville moderne et dynamique, dotée d'installations sportives de pointe,
                             telles qu'un centre aquatique, un hippodrome, un palais des sports et le stade Malherbe.
-                            <br>
+                            <br><br>
                             Enfin, la ville offre une gamme d'attractions exceptionnelles, notamment le Zénith, le parc
                             d'attractions Festyland et bien d'autres découvertes à faire lors de votre
                             séjour dans nos locations à Caen la Mer.
-                            <br>
+                            <br><br>
                             Caen la Mer est une ville d'art, d'histoire et d'activités, faisant d'elle la destination
                             parfaite pour vos vacances en Normandie.
                         </p>
@@ -205,7 +218,7 @@
                     </div>
                 </section>
                 <!-- Copyright -->
-                <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+                <div class="text-center p-4 b-footer">
                     © 2023 Copyright:
                     <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
                 </div>
