--- a/Test-cours-bootstrap-Mérouze-Aurélien/NosPrestations.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/NosPrestations.html
@@ -162,7 +162,7 @@
                 </div>
             </section>
             <!-- Copyright -->
-            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+            <div class="text-center p-4 b-footer">
                 © 2023 Copyright:
                 <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
