--- a/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -232,7 +232,7 @@
         <!-- ********************* footer *************************** -->
 
         <footer class="text-center text-lg-start bg-cosy text-muted">
-            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom ">
                 <div class="me-5 d-none d-lg-block">
                     <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
                 </div>
@@ -274,7 +274,7 @@
                 </div>
             </section>
             <!-- Copyright -->
-            <div class="text-center p-4" style="background-color: #BEB09A;">
+            <div class="text-center p-4 b-footer">
                 © 2023 Copyright:
                 <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
