try storage file

--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Contact.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Contact.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Nos logements</title>
+    <link rel="stylesheet" href="Css/bootstrap.css">
+    <link rel="stylesheet" href="Css/style.css">
+    <title>Nos prestations</title>
 </head>
 
 <body>
+    <!-- *************** Navbar with Menu Burger ************************ -->
     <header>
-
-        <!-- ********************** Navbar with burger menu ********************** -->
 
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
@@ -52,77 +51,19 @@
     </header>
     <main>
 
-        <!-- *********************    Section présentation logements ******************* -->
+        <!-- ******************* Titre *********************** -->
 
-        <h1 class="text-center">Nos Promotions</h1>
+        <h1 class="text-center">Contactez nous</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
 
-        <div class="container p-md-5">
-            <h3 id="logements" class="mt-5">Venez découvrir nos logements</h3>
-            <br>
-            <br>
-            <div class="row text-center">
-                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/chambre-patio.jpg"
-                            alt="Espace chambre Cosy Patio"></a>
-                    <p class="mb-5">Studio 2 personnes maximum, tout équipé,
-                        terrasse privative.
-                        <br>
-                        A partir de 49 euros.
-                    </p>
-                </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CaenZénith.html"> <br>Cosy Zénith<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/cuisine-patio.jpg"
-                            alt="Espace repas Caen Patio"></a>
-                    <p class="mb-5">Appartement 4 personnes maximum, tout équipé, 1 chambre, 1 couchage d'appoint.
-                        <br>
-                        A partir de 59 euros.
-                    </p>
-                </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'House.html"> <br>Zénit'House<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Zénit'House-compréssée/salle-zénithouse.jpg"
-                            alt="Pièce à vivre" Zénit'House></a>
-                    <p class="mb-5">Maison 4 personnes maximum, 2 chambres, toute équipée.
-                        <br>
-                        A partir de 69 euros.
-                    </p>
-                </div>
-            </div>
-            <hr>
-        </div>
-        <!-- ***********************Promotions******************************* -->
-
-
-        <div class="container">
-            <div class="row text-center">
-                <h4 class="mt-5 mb-5">Meilleurs prix garantis</h4>
-                <div class="col-12">
-                    <p>
-                    En réservant directement auprès de nous, vous bénéficiez du meilleur tarif en économisant 10% par
-                    rapport aux plateformes de réservation classique. <br>
-                    Les prix sont évolutifs en fonction de la période de l'année.
-                    </p>
-                </div>
-                <div class="row mb-5">
-                    <h4 class=" mb-5 mt-5 text-center">Et plus encore...</h4>
-                    <div class="offset-lg-1 col-lg-3">10 % de réduction supplémentaire pour une réservation de 7 nuits minimum.
-                    </div>
-                    <div class="offset-lg-1 col-lg-3">20 % de réduction supplémentaire pour une réservation de 14 nuits minimum.
-                    </div>
-                    <div class="offset-lg-1 col-lg-3">30 % de réduction supplémentaire pour une réservation de 21 nuits minimum.
-                    </div>
-                </div>
-            </div>
-            <hr>
-        </div>
-
         <!-- ****************** Formulaire ******************** -->
         <form>
-            <div class="container mt-5">
-                <div class="row"><h4 class="mb-5">Contactez nous</h4>
+            <div class="container">
+                <div class="row">
+                    <h4 class="mb-5">Contactez nous</h4>
                     <div class="col-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
@@ -180,13 +121,9 @@
                                 Vacances, Hébergements, Gites, Locations saisonnières.
                             </p>
                         </div>
-
-
-
-
                         <div class="col-md-6">
                             <h6 class="text-uppercase text-center fw-bold mb-4">
-                                <i class="fas fa-gem me-3 text-center"></i>Contact
+                                <i class="fas fa-gem me-3"></i>Contact
                             </h6>
                             <p class="text-center">
                                 +33688011150
@@ -202,7 +139,7 @@
             <!-- Copyright -->
             <div class="text-center p-4 b-footer">
                 © 2023 Copyright:
-                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">y1y1</a>
+                <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
             <!-- Copyright -->
         </footer>
@@ -210,11 +147,11 @@
 
 
     </main>
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
+    <script src="Js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
