--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/NosPrestations.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/NosPrestations.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Css/bootstrap.css">
+    <link rel="stylesheet" href="Css/style.css">
     <title>Nos prestations</title>
 </head>
 
@@ -172,11 +172,11 @@
 
 
     </main>
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
+    <script src="Js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
