--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/CosyZénith.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/CosyZénith.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Css/bootstrap.css">
+    <link rel="stylesheet" href="Css/style.css">
     <title>Cosy Zénith</title>
 </head>
 
@@ -273,25 +273,11 @@
 
 
     </main>
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
+    <script src="Js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
-        crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
