--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
@@ -89,12 +89,12 @@
 
          <div class="container p-md-5">
             <div class="row">
-                <div class="col-lg-8 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid w-100" src="Img-CosyZénith-compréssée/Chambre.jpg"
+                <div class="col-lg-8 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid " src="Img-CosyZénith-compréssée/Chambre.jpg"
                             alt="Chambre Cosy Zénith"></a>
                 </div>
-                <div class="col-lg-4 text-center"><br>
+                <div class="col-lg-4 text-center mt-5"><br>
+                    <h3 class="mb-5 mt-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons nous ? Nous avons
                     <p class="mb-5">
-                    <h3 class="mb-5 "><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons nous ? Nous avons
                     sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location saisonnière
                     vous propose une sélection de logements de qualité pour vous offrir un séjour confortable et
                     mémorable.</p>
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-lg-4"><br>
                     <p class="mb-5">
-                    <h3 class="mb-5"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
+                    <h3 class="mb-5 text-center"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
                     pour des vacances inoubliables en Normandie ! Caen la Mer gagne en popularité, notamment grâce à son
                     offre culturelle et patrimoniale exceptionnelle !</p>
                     <ul class="mt-5">
@@ -125,7 +125,7 @@
                         <li><a class="text-reset fw-bold" href="http://www.suisse-normande-tourisme.com/">La Suisse Normande</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-8 "><a href="CaenlaMer.html"><img class="logement mt-5 mb-5 img-fluid"
+                <div class="col-lg-8 "><a href="CaenlaMer.html"><img class="logement mt-5 mb-5 img-fluid w-100"
                             src="Img-CaenlaMer/Plage.jpg" alt="4 personnes arrivant à la
                             plage"></a>
                 </div>
