--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
@@ -59,24 +59,27 @@
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
-<!-- *********************    Section nos logements ******************* -->
+        <!-- *********************    Section nos logements ******************* -->
         <div class="container p-md-5">
             <h3 class="mt-5">Venez découvrir nos logements</h3>
             <br>
             <br>
             <div class="row text-center">
-                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img class="logement mt-4 mb-5 img-fluid"
-                            src="Img-Patio-compréssée/chambre-patio.jpg" alt="Espace chambre Cosy Patio"></a>
+                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img
+                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/chambre-patio.jpg"
+                            alt="Espace chambre Cosy Patio"></a>
                     <p class="mb-5">Venez découvrir cette suite à l'ambiance très Cosy, située idéalement à deux pas de
                         la gare de Caen et proche de toutes commodités !</p>
                 </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CosyZénith.html"> <br>Cosy Zénith<img class="logement mt-4 mb-5 img-fluid"
-                            src="Img-CosyZénith-compréssée/Salon.jpg" alt="Salon CosyCaen Zénith"></a>
+                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CosyZénith.html"> <br>Cosy Zénith<img
+                            class="logement mt-4 mb-5 img-fluid" src="Img-CosyZénith-compréssée/Salon.jpg"
+                            alt="Salon CosyCaen Zénith"></a>
                     <p class="mb-5">Idéalement situé à proximité du Zénith, du centre-ville et du stade d'Ornano, vous
                         découvrirez ce magnifique appartement Cosy orienté plein sud et sans aucun vis à vis !</p>
                 </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'house.html"> <br>Zénit'House<img class="logement mt-4 mb-5 img-fluid"
-                            src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" alt="Pièce à vivre Zénit'House" Zénit'House></a>
+                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'house.html"> <br>Zénit'House<img
+                            class="logement mt-4 mb-5 img-fluid" src="Img-Zénit'House-compréssée/salle-zénithouse.jpg"
+                            alt="Pièce à vivre Zénit'House" Zénit'House></a>
                     <p class="mb-5">A 5 minutes en voiture du Zénith et du parc expo, cette charmante maison Cosy est
                         parfaite pour profiter des évènements organisés aux alentours !</p>
                 </div>
@@ -85,19 +88,21 @@
 
         </div>
 
-         <!-- *********************** section Prestation ************************ -->
+        <!-- *********************** section Prestation ************************ -->
 
-         <div class="container p-md-5">
+        <div class="container mb-5">
             <div class="row">
-                <div class="col-lg-8 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid " src="Img-CosyZénith-compréssée/Chambre.jpg"
-                            alt="Chambre Cosy Zénith"></a>
+                <div class="col-lg-6 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid "
+                            src="Img-CosyZénith-compréssée/Chambre.jpg" alt="Chambre Cosy Zénith"></a>
                 </div>
-                <div class="col-lg-4 text-center mt-5"><br>
-                    <h3 class="mb-5 mt-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons nous ? Nous avons
+                <div class="col-lg-6 text-center mt-5"><br>
+                    <h3 class="mb-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons
+                    nous ? Nous avons
                     <p class="mb-5">
-                    sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location saisonnière
-                    vous propose une sélection de logements de qualité pour vous offrir un séjour confortable et
-                    mémorable.</p>
+                        sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location
+                        saisonnière
+                        vous propose une sélection de logements de qualité pour vous offrir un séjour confortable et
+                        mémorable.</p>
                 </div>
             </div>
             <hr>
@@ -105,29 +110,33 @@
         </div>
         <!-- *************************  section Découvrir **************************** -->
 
-        <div class="container p-md-5">
+        <div class="container mb-5">
             <div class="row">
-                <div class="col-lg-4"><br>
+                <div class="col-lg-6">
                     <p class="mb-5">
-                    <h3 class="mb-5 text-center"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
+                    <h3 class="mb-5 text-center"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à
+                            découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
                     pour des vacances inoubliables en Normandie ! Caen la Mer gagne en popularité, notamment grâce à son
                     offre culturelle et patrimoniale exceptionnelle !</p>
                     <ul class="mt-5">
                         <li><a class="text-reset fw-bold"
                                 href="https://www.normandie-tourisme.fr/decouverte/histoire/d-day-et-bataille-de-normandie/les-plages-du-debarquement/">Les
                                 plages du débarquements</a></li>
-                        <li><a class="text-reset fw-bold" href="https://www.caenlamer-tourisme.fr/patrimoine-culturel/chateau-de-caen/">Le château
+                        <li><a class="text-reset fw-bold"
+                                href="https://www.caenlamer-tourisme.fr/patrimoine-culturel/chateau-de-caen/">Le château
                                 de Caen</a></li>
                         <li><a class="text-reset fw-bold"
                                 href="https://www.caenlamer-tourisme.fr/decouvrir-caen-la-mer/sur-les-traces-du-debarquement-et-de-la-bataille-de-normandie-a-caen/le-memorial-de-caen/">Le
                                 Mémorial de Caen</a></li>
-                        <li><a class="text-reset fw-bold" href="https://festyland.com/">Parc d'attraction Festyland</a></li>
-                        <li><a class="text-reset fw-bold" href="http://www.suisse-normande-tourisme.com/">La Suisse Normande</a></li>
+                        <li><a class="text-reset fw-bold" href="https://festyland.com/">Parc d'attraction Festyland</a>
+                        </li>
+                        <li><a class="text-reset fw-bold" href="http://www.suisse-normande-tourisme.com/">La Suisse
+                                Normande</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-8 "><a href="CaenlaMer.html"><img class="logement mt-5 mb-5 img-fluid w-100"
+                <div class="col-lg-6"><a href="CaenlaMer.html"><img class="logement mt-5 mb-5 img-fluid "
                             src="Img-CaenlaMer/Plage.jpg" alt="4 personnes arrivant à la
-                            plage"></a>
+                                            plage"></a>
                 </div>
 
             </div>
@@ -136,29 +145,39 @@
         </div>
 
 
-       
+
 
         <!-- ****************** Formulaire ******************** -->
-        <form>
+
+        <form class="form">
             <div class="container">
-                <div class="row"><h4 class="mb-5">Contactez nous</h4>
+                <h4 class="mb-5">Contactez nous</h4>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <label for="inputName" class="form-label">Nom et Prénom</label>
+                            <input type="text" class="form-control name">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+                            <input type="email" class="form-control email" aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="mb-3">
-                            <label for="name" class="form-label">Nom et Prénom</label>
-                            <input type="name" class="form-control" id="inputName">
+                            <label for="inputNumber" class="form-label">Numéro de téléphone</label>
+                            <input type="text" class="form-control">
                         </div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control" placeholder="Laissez-nous votre message !" id="commentaire"
+                    <textarea class="form-control message" placeholder="Laissez-nous votre message !"
                         style="height: 100px"></textarea>
                 </div>
                 <div class="row">
@@ -168,12 +187,13 @@
                             <label class="form-check-label" for="check">Valider le formulaire</label>
                         </div>
                     </div>
-
                 </div>
-
-
                 <button type="submit" class="btn mb-5">Envoyer</button>
+            </div>
         </form>
+
+
+
         <!-- ********************* footer *************************** -->
 
         <footer class="text-center text-lg-start bg-cosy text-muted">
@@ -181,7 +201,7 @@
                 <div class="me-5 d-none d-lg-block">
                     <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
                 </div>
-           </section>
+            </section>
 
 
             <section class="">
@@ -202,20 +222,20 @@
 
 
 
-                        
-                            <div class="col-md-6">
-                                <h6 class="text-uppercase text-center fw-bold mb-4">
-                                    <i class="fas fa-gem me-3"></i>Contact
-                                </h6>
-                                <p class="text-center">
-                                    +33688011150
-                                    <br>
-                                    cosycaen@gmail.com
-                                    <br>
-                                    CaenlaMer, 14, France
-                                </p>
-                            </div>
+
+                        <div class="col-md-6">
+                            <h6 class="text-uppercase text-center fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Contact
+                            </h6>
+                            <p class="text-center">
+                                +33688011150
+                                <br>
+                                cosycaen@gmail.com
+                                <br>
+                                CaenlaMer, 14, France
+                            </p>
                         </div>
+                    </div>
                 </div>
             </section>
             <!-- Copyright -->
@@ -229,11 +249,9 @@
 
 
     </main>
-    <script src="Js/script.js"></script>
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 
 </html>
