--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
@@ -96,9 +96,8 @@
                             src="Img-CosyZénith-compréssée/Chambre.jpg" alt="Chambre Cosy Zénith"></a>
                 </div>
                 <div class="col-lg-6 text-center mt-5"><br>
-                    <h3 class="mb-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons
-                    nous ? Nous avons
-                    <p class="mb-5">
+                    <h3 class="mb-5 mt-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>
+                    <p class="mt-5">Que proposons nous ? <br> Nous avons
                         sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location
                         saisonnière
                         vous propose une sélection de logements de qualité pour vous offrir un séjour confortable et
