--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/index.html
@@ -54,7 +54,7 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center">Les Logements<br>Cosy</h1>
+        <h1 class="text-center">Les Logements Cosy</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
@@ -248,6 +248,12 @@
 
 
     </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
+
     <script src="Js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="Js/script.js"></script>
