create calendar in zenithouse and start function js . up and down month its ok

--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/NosPromotions.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/NosPromotions.html
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 "><a class="text-reset fw-bold" href="CaenZénith.html"> <br>Cosy Zénith<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/cuisine-patio.jpg"
+                            class="logement mt-4 mb-5 img-fluid" src="Img-CosyZénith-compréssée/Salon.jpg"
                             alt="Espace repas Caen Patio"></a>
                     <p class="mb-5">Appartement 4 personnes maximum, tout équipé, 1 chambre, 1 couchage d'appoint.
                         <br>
