--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -190,7 +190,99 @@
                 </div>
             </div>
         </div>
+        <!-- *******************************************Calendrier**************************** -->
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <div class="calendar-container">
+
+                        <div id="cld" class="calendar-container">
+                            <div id="enteteCLD">
+                                <h4 id="cldT">Janvier</h4>
+                                <div id="avantEtApres">
+                                    <button id="left" class="cldBtn"><img src="icon/FlècheGauche.png"
+                                            alt="BoutonGaucheCld"></button>
+                                    <button id="right" class="cldBtn"><img src="icon/FlècheDroite.png"
+                                            alt="BoutonDroitCld"></button>
+                                </div>
+                            </div>
+
+
+                            <!-- <div id="cldBoite">
+                                <div id="jours">
+                                    <div class="jour">Lun</div>
+                                    <div class="jour">Mar</div>
+                                    <div class="jour">Mer</div>
+                                    <div class="jour">Jeu</div>
+                                    <div class="jour">Ven</div>
+                                    <div class="jour">Sam</div>
+                                    <div class="jour">Dim</div>
+                                </div>
+                            </div> -->
+
+                            <div id="semaine1" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                            <div id="semaine2" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                            <div id="semaine3" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                            <div id="semaine4" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                            <div id="semaine5" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                            <div id="semaine6" class="semaine">
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                                <div class="case"></div>
+                            </div>
+                           
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- ****************** Formulaire ******************** -->
         <form class="form">
@@ -221,7 +313,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control message" placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
+                    <textarea class="form-control message" placeholder="Laissez-nous votre message !"
+                        style="height: 100px"></textarea>
                 </div>
                 <div class="row">
                     <div class="col-6">
