--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/CosyZénith.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/CosyZénith.html
@@ -166,7 +166,7 @@
 
         <!--Google map-->
         <div class="container mt-lg-5 mb-lg-5">
-            <h5 class="text-center mb-5">Situer le logement</h5>
+            <h5 class="text-center mt-5 mb-5">Situer le logement</h5>
             <div class="row offset-lg-2 col-lg-8">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
                     <iframe
@@ -184,7 +184,7 @@
         <!-- ****************** Formulaire ******************** -->
         <form class="form">
             <div class="container">
-                <h4 class="mb-5">Contactez nous</h4>
+                <h4 class="mt-5 mb-5">Contactez nous</h4>
                 <div class="row">
                     <div class="col-6">
                         <div class="mb-3">
