end of calendar in zenihouse

--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -197,19 +197,23 @@
                 <div class="col-md-10 offset-md-1">
                     <div class="calendar-container">
 
-                        <div id="cld" class="calendar-container">
+                        <div id="cld">
                             <div id="enteteCLD">
                                 <h4 id="cldT">Janvier</h4>
                                 <div id="avantEtApres">
-                                    <button id="left" class="cldBtn"><img src="icon/FlècheGauche.png"
-                                            alt="BoutonGaucheCld"></button>
-                                    <button id="right" class="cldBtn"><img src="icon/FlècheDroite.png"
-                                            alt="BoutonDroitCld"></button>
+                                    <button id="left" class="cldBtn"><
+                                        <!-- <img class="leftBtn" src="icon/FlècheGauche.png"
+                                            alt="BoutonGaucheCld"> -->
+                                        </button>
+                                    <button id="right" class="cldBtn">>
+                                        <!-- <img class="rightBtn" src="icon/FlècheDroite.png"
+                                            alt="BoutonDroitCld"> -->
+                                        </button>
                                 </div>
                             </div>
 
 
-                            <!-- <div id="cldBoite">
+                            <div id="cldBoite">
                                 <div id="jours">
                                     <div class="jour">Lun</div>
                                     <div class="jour">Mar</div>
@@ -219,7 +223,7 @@
                                     <div class="jour">Sam</div>
                                     <div class="jour">Dim</div>
                                 </div>
-                            </div> -->
+                            
 
                             <div id="semaine1" class="semaine">
                                 <div class="case"></div>
@@ -275,7 +279,7 @@
                                 <div class="case"></div>
                                 <div class="case"></div>
                             </div>
-                           
+                        </div>
 
                         </div>
 
